# autothreats

./: .gitignore  README.md  captain-definition  deaththreats-svg.captain-deffinition  main.py  svg-service.captain-definition
frontend/: package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/routes/: +page.svelte
plotter_node/: generateGcode.py  main.py  output.gcode
plotter_node/config/: config.py  nextfile.gcode  printend.gcode  printstart.gcode  startup.gcode
plotter_node/gcodeplot/: gcodeplot.py
plotter_node/gcodeplot/gcodeplotutils/: anneal.py  sendgcode.py
servoarduino/ServoArduino/: platformio.ini
servoarduino/ServoArduino/src/: main.cpp
svg-service/: Cargo.toml  Dockerfile  dummy.rs
svg-service/src/: main.rs  template.tex
svgmapapi/: Dockerfile  docker-compose.yml  entrypoint.sh  requirements.txt  svgmapapi.py
svgmapapi/prettymaps/: requirements.txt
svgmapapi/prettymaps/prettymaps/: draw.py
svgmapapi/prettymaps/prettymaps.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
svgmapapi/prettymaps/prettymaps/presets/: cb-bf-f.json
